# rawi

./: CMakeLists.txt  LICENSE  README.md  build.bat  clean.bat  usage.txt
src/: converter.c  converter.h  main.c  reader.c  reader.h
